# student-signal

./: CLAUDE.md  Model_analysis.qmd  README.md  ROADMAP.md  main.py  mkdocs.yml  painpoints_overview.md  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml  publish.yml
app/: main.py
docs/: aan-de-slag.md  index.md
docs/api/: index.md
module/: plot.py
src/student_signal/: __init__.py  analyze.py  dataset.py  evaluate.py  features.py  pipeline.py  visualize.py
src/student_signal/metadata/: config.yaml  data_dictionary.csv
src/student_signal/modeling/: predict.py  train.py
src/uitnodigingsregel/: __init__.py  dataset.py
src/uitnodigingsregel/metadata/: config.yaml
tests/: test_dataset.py  test_evaluate.py  test_features.py
