[project]
name = "student_signal"
version = "0.1.0"
description = "Domain library for student dropout prediction: data preparation, ranking, and evaluation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.8.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv]
cache-dir = "./.uv_cache"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
