[project]
name = "student_signal"
dynamic = ["version"]
description = "Domain library for student dropout prediction: data preparation, ranking, and evaluation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "CEDA"},
]
keywords = ["student", "dropout", "prediction", "intervention", "machine-learning", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.8.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
]

[project.urls]
Repository = "https://github.com/cedanl/student-signal"
Issues = "https://github.com/cedanl/student-signal/issues"
Changelog = "https://github.com/cedanl/student-signal/releases"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.uv]
cache-dir = "./.uv_cache"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
